mdapipkg/objects/Resmed_Custom__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Resmed Site Custom Setting</label>
    <fields>
        <fullName>apikey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>apikey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resource__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>